@@ -235,7 +235,7 @@ a.map_percent span		{display:inline; font-size:1.0em; line-height:1.15em; color:
 
 /*	Stats (key figures) styles
 	============================================= */
-.stats_wrap				{width:100%; margin:0 auto; padding:0px;}
+.main_stats_wrap		{width:100%; margin:0 auto; padding:0px;}
 span.stats_title		{display:block; font-size:24px; color:#000; padding-bottom:10px;}
 span.stats_title.view	{display:inline-block; font-size:1.0em; color:#000; margin-left:20px; vertical-align:bottom; text-align:left; padding:0;} /* Table view */
 span.stats_num			{display:block; font-size:100px; color:#000;}
@@ -254,6 +254,23 @@ a.stats_link:hover			{background-color:#e9e9e9;}
 a.stats_link.missing		{margin-left:0; font-size:18px;}
 a.stats_link.missing span	{color:#000;}
 
+
+/*	Multi-modal Stats (key figures) styles
+	============================================= */
+.status_wrap			{margin:0 auto; margin-bottom:25px;}
+.status_button_wrap		{display:flex; width:960px; margin:0 auto; flex-wrap:wrap; justify-content:center; gap:14px; margin-bottom:12px;}
+.status					{display:grid; grid-template-columns:56% 42%; overflow:hidden; width:960px; margin:0 auto; margin-bottom:15px; grid-template-rows:[row1] 140px [row2] 75px [row3]; grid-column-gap:14px; grid-row-gap:8px;}
+.status_pipeline		{grid-row-start:row1; grid-row-end:row3; display:flex;}
+.status_publisher		{grid-column-start:2; grid-row-start:row1; grid-row-end:row2;}
+.status_total			{grid-column-start:2; grid-row-start:row2; grid-row-end:row3;}
+
+.status_pipeline a.stats_link.active		{margin:0; height:initial; padding:2em; align-self:stretch; width:100%;}
+.status_publisher a.stats_link.publishers	{margin:0; height:initial; padding:1.6em 2em;}
+.status_total a.stats_link.total			{margin:0; height:initial; font-size:18px; padding:1.5em;}
+
+.status_button_wrap a	{flex-basis:187px; padding:20px 20px; margin:0; height:initial; font-size:18px;}
+.status_button_wrap a span,
+.status_total a span	{color:#000;}
 
 
 /*	Active / Ended projects styles
@@ -598,6 +615,7 @@ table.activity td.title	{padding:0; width:59%;}
 table.activity td.value	{text-align:right; padding:10px 20px 25px 20px; font-size:1.0em; line-height:1.75em; width:20%;}
 table.activity td.count	{text-align:right; padding:10px 20px 0 40px; font-size:1.7em; line-height:1.0em;}
 table.activity td.date	{text-align:right; padding:10px 20px; white-space:nowrap; font-size:1.0em; line-height:1.75em; width:15%;}
+table.activity td.code	{text-align:right; padding:0; white-space:nowrap; font-size:1.2em; line-height:1.5em; width:15%;}
 table.activity td.date.missing_date		{width:10%; min-width:100px;}
 table.activity td.alert_no_iati	{text-align:center; font-size:1.6em; padding:40px; cursor:default;}
 table.activity td span	{display:block; padding:2px 0 3px 0; color:#000; font-size:0.7em; line-height:1.25em; width:100%;}
