@@ -226,6 +226,9 @@ IATI 出版社
 #stats_missing_text
 其他项目
 
+#stats_status_code_text
+状态代码
+
 #stats_active_table_text
 活跃项目
 
