@@ -229,6 +229,9 @@ Suspended
 #stats_missing_text
 Other Activities
 
+#stats_status_code_text
+Status code
+
 #stats_active_table_text
 Active<br/>Activities
 
