@@ -226,6 +226,9 @@ Suspendu
 #stats_missing_text
 D'autres projets
 
+#stats_status_code_text
+Code d'état
+
 #stats_active_table_text
 Projets<br/>Actifs
 
