@@ -226,6 +226,9 @@ IATI प्रकाशक
 #stats_missing_text
 अन्य परियोजनाएँ
 
+#stats_status_code_text
+स्थिति कोड
+
 #stats_active_table_text
 सक्रिय परियोजनाओं
 
