@@ -226,6 +226,9 @@ IATIパブリッシャ
 #stats_missing_text
 その他のプロジェクト
 
+#stats_status_code_text
+ステータス コード
+
 #stats_active_table_text
 アクティブなプロジェクト
 
