@@ -226,6 +226,9 @@ Suspendido
 #stats_missing_text
 Otros proyectos
 
+#stats_status_code_text
+Código de estado
+
 #stats_active_table_text
 Proyectos<br/>Activos
 
