@@ -96,7 +96,7 @@
 {new_main_stats}
 
 #old_main_stats
-<div class="stats_wrap">
+<div class="main_stats_wrap">
 	<table class="title key">
 		<tr>
 			<td class="icon"><img src="{flava}publisher_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
@@ -144,7 +144,7 @@
 </div>
 
 #new_main_stats2
-<div class="stats_wrap">
+<div class="main_stats_wrap">
 	<table class="title key">
 		<tr>
 			<td class="icon"><img src="{flava}publisher_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
@@ -214,90 +214,90 @@
 </div>
 
 #new_main_stats
-<div class="stats_wrap">
+<div class="main_stats_wrap">
 	<table class="title key">
 		<tr>
 			<td class="icon"><img src="{flava}publisher_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
 			<td>{stats_title_text}</td>
 		</tr>
 	</table>
-	<div class="status_wrap" style="margin:0 auto; margin-bottom:25px;">
-		<div class="status" style="display:grid; grid-template-columns:58% 42%; overflow:hidden; width:960px; margin:0 auto; margin-bottom:15px; grid-template-rows:[row1] 140px [row2] 65px [row3]; grid-column-gap:14px; grid-row-gap:8px;">
-			<div class="status_pipeline" style="grid-row-start:row1; grid-row-end:row3; display:flex;">
-				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities&status_code=2" class="stats_link active" title="{stats_implementation_tip_text}" style="margin:0; height:initial; padding:2em; align-self:stretch; width:100%;">
+	<div class="status_wrap">
+		<div class="status">
+			<div class="status_pipeline">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities&status_code=2" class="stats_link active" title="{stats_implementation_tip_text}">
 					<span class="stats_title">{stats_implementation_text}</span>
 					<span class="stats_num">{numof_status_code_2}</span>
 				</a>
 			</div>
-			<div style="grid-column-start:2; grid-row-start:row1; grid-row-end:row2;">
-				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_publishers" class="stats_link publishers" title="{stats_publisher_tip_text}" style="margin:0; height:initial; padding:1.6em 2em;">
+			<div class="status_publisher">
+				<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_publishers" class="stats_link publishers" title="{stats_publisher_tip_text}">
 					<span class="stats_title">{stats_publisher_text}</span>
 					<span class="stats_num small">{numof_publishers}</span>
 				</a>
 			</div>
-			<div style="grid-column-start:2; grid-row-start:row2; grid-row-end:row3;">
-				<a onclick="switch($(this).children('span').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total" title="{stats_total_tip_text}" style="padding:1.5em; margin:0; height:initial; font-size:18px;">
+			<div  class="status_total">
+				<a onclick="switch($(this).children('span').first().html()){ case '0': return false; };" href="#view=list_activities" class="stats_link total" title="{stats_total_tip_text}">
 					{stats_total_text} <span>{numof_status_code_total}</span>
 				</a>
 			</div>
 		</div>
-		<div class="status" style="display:flex; width:960px; margin:0 auto; flex-wrap:wrap; justify-content:center; gap:14px; margin-bottom:12px;">
-			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=active" class="stats_link" title="{stats_active_tip_text}" style="flex-basis:190px; padding:20px 20px; margin:0; height:initial; font-size:18px;">
+		<div class="status_button_wrap">
+			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=active" class="stats_link" title="{stats_active_tip_text}">
 				Active <span>{active_projects}</span>
 			</a>
-			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=ended" class="stats_link" title="{stats_ended_tip_text}" style="flex-basis:190px; padding:20px 20px; margin:0; height:initial; font-size:18px;">
+			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=ended" class="stats_link" title="{stats_ended_tip_text}">
 				Ended <span>{ended_projects}</span>
 			</a>
-			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=planned" class="stats_link" title="{stats_planned_tip_text}" style="flex-basis:189px; padding:20px 20px; margin:0; height:initial; font-size:18px;">
+			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=planned" class="stats_link" title="{stats_planned_tip_text}">
 				Planned <span>{planned_projects}</span>
 			</a>
-			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities&status_code_null=0" class="stats_link missing" title="{stats_missing_tip_text}" style="flex-basis:189px; padding:20px 20px; margin:0; height:initial;">
+			<a onclick="switch($(this).children('.stats_num').first().html()){ case '0': return false; };" href="#view=list_activities&status_code_null=0" class="stats_link missing" title="{stats_missing_tip_text}">
 				{stats_missing_text} <span>{numof_status_code_unknown}</span>
 			</a>
 		</div>
-		<div class="table_wrap main" style="margin:0 auto;">
+		<div class="table_wrap main auto">
 			<table class="activity">
 				<tbody>
 				<tr>
 					<th class="titles"></th>
-					<th class="titles">Activity status</th>
-					<th class="titles">Status code</th>
-					<th class="titles">Total activities</th>
+					<th class="titles">{search_status_txt}</th>
+					<th class="titles">{stats_status_code_text}</th>
+					<th class="titles">{stats_total_text}</th>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=1');">
 					<td class="num">1.</td>
 					<td class="title"><a>{stats_pipeline_text}</a></td>
-					<td class="date"><a>1</a></td>
+					<td class="code"><a>1</a></td>
 					<td class="count" title="{stats_pipeline_tip_text}">{numof_status_code_1}</td>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=2');">
 					<td class="num">2.</td>
 					<td class="title"><a>{stats_implementation_text}</a></td>
-					<td class="date"><a>2</a></td>
+					<td class="code"><a>2</a></td>
 					<td class="count" title="{stats_implementation_tip_text}">{numof_status_code_2}</td>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=3');">
 					<td class="num">3.</td>
 					<td class="title"><a>{stats_finalisation_text}</a></td>
-					<td class="date"><a>3</a></td>
+					<td class="code"><a>3</a></td>
 					<td class="count" title="{stats_finalisation_tip_text}">{numof_status_code_3}</td>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=4');">
 					<td class="num">4.</td>
 					<td class="title"><a>{stats_closed_text}</a></td>
-					<td class="date"><a>4</a></td>
+					<td class="code"><a>4</a></td>
 					<td class="count" title="{stats_closed_tip_text}">{numof_status_code_4}</td>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=5');">
 					<td class="num">5.</td>
 					<td class="title"><a>{stats_cancelled_text}</a></td>
-					<td class="date"><a>5</a></td>
+					<td class="code"><a>5</a></td>
 					<td class="count" title="{stats_cancelled_tip_text}">{numof_status_code_5}</td>
 				</tr>
 				<tr onclick="return ctrack.url('#view=list_activities&status_code=6');">
 					<td class="num">6.</td>
 					<td class="title"><a>{stats_suspended_text}</a></td>
-					<td class="date"><a>6</a></td>
+					<td class="code"><a>6</a></td>
 					<td class="count" title="{stats_suspended_tip_text}">{numof_status_code_6}</td>
 				</tr>
 				</tbody>
@@ -308,7 +308,7 @@
 </div>
 
 #new_main_stats3
-<div class="stats_wrap">
+<div class="main_stats_wrap">
 	<table class="title key">
 		<tr>
 			<td class="icon"><img src="{flava}publisher_icon.png" alt="{active_icon_alt_text}" width="40" height="40"/></td>
@@ -366,7 +366,7 @@
 </div>
 
 #main_sdg
-<div class="stats_wrap">
+<div class="main_stats_wrap">
 	<div class="sdg_wrap">
 		<div class="sdg">
 			<div class="sdg_icon"><img src="/ctrack/art/sdg/sdg-15.svg"></div>
