@@ -1,3 +1,10 @@
+Development Portal (2025-01-16 shi)
+==============================
+Update new stats for current theme
+Update translations
+Update print-friendly
+
+
 Development Portal (2025-01-15 shi)
 ==============================
 Display new stats with tables for white version
